Fixed spacing for recipe page

--- a/src/pages/recipe/Recipe.css
+++ b/src/pages/recipe/Recipe.css
@@ -1,22 +1,26 @@
 .recipe {
+  padding: 40px 0;
+}
+
+.recipe .card {
   max-width: 1200px;
-  margin: 40px auto;
+  margin: 0 auto;
   background: #FFF;
   padding: 40px;
   box-sizing: border-box;
 }
 
 @media (max-width: 1199.98px) {
-  .recipe {
+  .recipe .card {
     max-width: none;
-    margin: 40px 20px;
+    margin: 0 20px;
   }
 }
 
 @media (max-width: 767.98px) {
-  .recipe {
+  .recipe .card {
     max-width: none;
-    margin: 40px 20px;
+    margin: 0 20px;
   }
 }
 
